2013-12-12  Per Bothner  <per@bothner.com>

	* CatchClause.java (<init>(Declaration,Expression)),
	(<init>(Object,Type,Expression)): New constructors.
	* TryExp.java (addCatchClause): New method.

2013-12-08  Per Bothner  <per@bothner.com>

	* ModuleExp.java (valueOf): New static Method.  This allows writing
	a macro-generated SyntaxTemplate to a compiled class.
	This helps fix Savannah bug #40822 "Exporting macro-defined macro:
	Internal error".

2013-12-02  Per Bothner  <per@bothner.com>

	* StackTarget.java (forceLazyIfNeeded): Only force Lazy value if it
	isn't already an instance of the target type.

	* PrimProcedure.java (compile): Don't convert TypeVariable to raw type
	here.
	(compileInlive): Instead maybe do it here.  But preferentially
	to an emitCheckcast instead - see comment for rationale.

2013-11-30  Per Bothner  <per@bothner.com>

	* SetExp.java (print): Handle null symbol.

2013-11-24  Per Bothner  <per@bothner.com>

	* Expression.java (checkLiteralKeyword): New method.

2013-11-10  Per Bothner  <per@bothner.com>

	* Compilation.java (pushPendingImport): Update to new formStack API.

2013-11-03  Per Bothner  <per@bothner.com>

	* Compilation.java (compileConstant): Minor optimization.

2013-10-17  Per Bothner  <per@bothner.com>

	* ModuleExp.java (allocFields): Make field also if needsExternalAccess.
	* InlineCalls.javav (visitReferenceExp): Better handling of
	getDontDereference case.

2013-10-07  Per Bothner  <per@bothner.com>

	* PrimProcedure.java: Use methodForInvoke for reflective
	application as well as compilation - i.e. generally when
	calling Method#getDeclaringClass.
	(getDeclaringClass): New convenience method.

2013-10-05  Jamison Hope  <jrh@theptrgroup.com>

	* PrimProcedure.java (disassemble): Fall back to system
	ClassLoader if Class#getClassLoader returns null.  This avoids a
	NullPointerException when invoking disassemble on methods of
	system classes.

2013-10-07  Per Bothner  <per@bothner.com>
